# lichtfeld-studio

./: CMakeLists.txt
.github/workflows/: nightly.yml  ubuntu.yml  windows.yml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  run_docker.sh
eval/: benchmark_mipnerf360_mrnf.sh  mrnf_optimization_params.json
include/core/: logger.hpp  splat_data.hpp
include/core_new/: camera.hpp  cuda_alloc_tracker.hpp  event_bus.hpp  events.hpp  image_io.hpp  logger.hpp  pinned_memory_allocator.hpp  splat_data.hpp
include/geometry_new/: bounding_box.hpp  euclidean_transform.hpp
include/kernels/: bilateral_grid.cuh  ssim.cuh
src/: application.cpp  main.cpp  main_legacy.cpp
src/core_new/: CMakeLists.txt  camera.cpp  image_io.cpp  splat_data.cpp
src/core_new/tensor/: CMakeLists.txt  offset_allocator.cpp  pinned_memory_allocator.cpp  tensor.cpp  tensor_advanced_ops.cpp  tensor_broadcast.cpp  tensor_broadcast_ops.cu  tensor_masking_ops.cpp  tensor_masking_ops.cu  tensor_movement_ops.cpp  tensor_ops.cu  tensor_ops.cu.orig  tensor_random_ops.cpp  tensor_random_ops.cu  tensor_unified_ops.cpp  tensor_utils.cpp  tensor_warp_reduce.cu
src/core_new/tensor/internal/: allocation_profiler.hpp  cuda_stream_context.hpp  gpu_arena_allocator.hpp  memory_pool.hpp  offset_allocator.hpp  tensor_broadcast_ops.cuh  tensor_expr_impl.hpp  tensor_impl.hpp  tensor_ops.hpp  warp_reduce.cuh
src/geometry_new/: CMakeLists.txt  bounding_box.cpp  euclidean_transform.cpp
src/project_new/: CMakeLists.txt  project.cpp
src/rendering_new/cuda_tensor/: CMakeLists.txt
src/rendering_new/cuda_tensor/rasterization/include/: buffer_utils.h  forward.h  kernel_utils.cuh  kernels_forward.cuh  rasterization_api_tensor.h  rasterization_config.h  rasterizer_memory_arena.h
src/rendering_new/cuda_tensor/rasterization/src/: forward.cu  rasterization_api_tensor.cu  rasterizer_memory_arena.cu
src/training/: CMakeLists.txt  checkpoint.cpp  dataset.hpp  trainer.cpp
src/training/components/: bilateral_grid.hpp  sparsity_optimizer.hpp
src/training/include/lfs/kernels/: ssim.cuh  ssim_reduction.cuh
src/training/kernels/: bilateral_grid_backward.cu  bilateral_grid_forward.cu  bilateral_grid_tv.cu  grad_alpha.cu  grad_alpha.hpp  mrnf_kernels.cu  mrnf_kernels.hpp  ssim.cu  ssim_reduction.cu
src/training/metrics/: metrics.cpp  metrics.hpp
src/training/rasterization/: edge_rasterizer.cpp  fast_rasterizer.cpp  fast_rasterizer.hpp  gsplat_rasterizer.cpp
src/training/rasterization/edge_compute/rasterization/include/: kernels_forward.cuh
src/training/rasterization/edge_compute/rasterization/src/: forward.cu
src/training/rasterization/fastgs/rasterization/include/: kernels_backward.cuh  kernels_forward.cuh  rasterization_config.h
src/training/rasterization/fastgs/rasterization/src/: backward.cu  forward.cu
src/training/strategies/: improved_gs_plus.cpp  improved_gs_plus.hpp  istrategy.hpp  mcmc.cpp  mcmc.hpp  mrnf.cpp  mrnf.hpp  strategy_factory.cpp
src/training_debug/: CMakeLists.txt  training_debug.cpp  training_debug.hpp
src/training_new/: CMakeLists.txt  dataset.hpp  progress.hpp  trainer.cpp  trainer.hpp  training_setup.cpp  training_setup.hpp
src/training_new/components/: bilateral_grid.cpp  bilateral_grid.hpp  sparsity_optimizer.cpp  sparsity_optimizer.hpp  sparsity_optimizer_kernels.cu
src/training_new/fastgs/: CMakeLists.txt
src/training_new/fastgs/optimizer/include/: adam.h  adam_api.h  adam_kernels.cuh  optimizer_config.h
src/training_new/fastgs/optimizer/src/: adam.cu  adam_api.cu
src/training_new/fastgs/rasterization/include/: backward.h  buffer_utils.h  forward.h  kernel_utils.cuh  kernels_backward.cuh  kernels_forward.cuh  rasterization_api.h  rasterization_config.h  rasterizer_memory_arena.h
src/training_new/fastgs/rasterization/src/: backward.cu  forward.cu  rasterization_api.cu  rasterizer_memory_arena.cu
src/training_new/fastgs/utils/: cuda_utils.h  utils.h
src/training_new/kernels/: bilateral_grid_backward.cu  bilateral_grid_forward.cu  bilateral_grid_tv.cu  densification_kernels.cu  densification_kernels.hpp  grad_alpha.cu  grad_alpha.hpp  l1_loss.cu  mcmc_kernels.cu  mcmc_kernels.hpp  regularization.cu  ssim.cu  ssim_reduction.cu
src/training_new/losses/: losses.hpp  photometric_loss.cpp  photometric_loss.hpp  regularization.cpp  regularization.hpp
src/training_new/metrics/: metrics.cpp  metrics.hpp
src/training_new/optimizer/: adam_optimizer.cpp  adam_optimizer.hpp  render_output.hpp  scheduler.cpp  scheduler.hpp
src/training_new/rasterization/: fast_rasterizer.cpp  fast_rasterizer.hpp
src/training_new/strategies/: default_strategy.cpp  default_strategy.hpp  istrategy.hpp  mcmc.cpp  mcmc.hpp  strategy_utils.cpp  strategy_utils.hpp
tests/: CMakeLists.txt  benchmark_background_blend.cpp  benchmark_default_strategy.cpp  benchmark_grad_alpha_layout.cpp  benchmark_losses.cpp  benchmark_scheduler.cpp  benchmark_slice_assignment.cpp  benchmark_strided_tensors.cpp  profile_adam_optimizer.cpp  test_activation_gradients.cpp  test_add_new_gs_deterministic.cpp  test_background_image.cpp  test_bilateral_grid.cpp.disabled  test_bool_reduction.cpp  test_bug_regressions.cpp  test_checkpoint_resume.cpp  test_colmap_image_layout.cpp  test_cuda_device_state.cpp  test_curand_buffer_overflow.cpp  test_dataloader_lfs.cpp  test_default_strategy.cpp  test_default_strategy_comparison.cpp  test_default_strategy_operations_comparison.cpp  test_default_strategy_real_conditions.cpp  test_default_strategy_vs_reference.cpp  test_densification.cpp  test_dtype_operations_comprehensive.cpp  test_gradient_accumulation.cpp  test_input_controller_focus.cpp  test_lfs_adam_optimizer.cpp  test_lfs_losses.cpp  test_lfs_scheduler.cpp  test_loss_gradients.cpp  test_main.cpp  test_mcmc_add_new_gs_comparison.cpp.disabled  test_mcmc_critical_bugs.cpp  test_mcmc_kernels.cpp  test_mcmc_logit_verification.cpp  test_mcmc_memory_ops.cpp  test_mcmc_relocate_optimizer_state_bug.cpp  (+40 more)
tests/python/: test_import_dialog_panels.py  test_plugin_api_surface.py  test_rendering_panel_regressions.py
(+277 files in other folders)
